packages/test_track/lib/src/errors/test_track_exception.dart
/// An interface for all the different types of Exceptions thrown within the TestTrack package
abstract class TestTrackException implements Exception {}
